feat: add /generate endpoint
